; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/regex/extr_regc_nfa.c_dupnfa.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/regex/extr_regc_nfa.c_dupnfa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfa = type { i32 }
%struct.state = type { %struct.state* }

@EMPTY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nfa*, %struct.state*, %struct.state*, %struct.state*, %struct.state*)* @dupnfa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dupnfa(%struct.nfa* %0, %struct.state* %1, %struct.state* %2, %struct.state* %3, %struct.state* %4) #0 {
  %6 = alloca %struct.nfa*, align 8
  %7 = alloca %struct.state*, align 8
  %8 = alloca %struct.state*, align 8
  %9 = alloca %struct.state*, align 8
  %10 = alloca %struct.state*, align 8
  store %struct.nfa* %0, %struct.nfa** %6, align 8
  store %struct.state* %1, %struct.state** %7, align 8
  store %struct.state* %2, %struct.state** %8, align 8
  store %struct.state* %3, %struct.state** %9, align 8
  store %struct.state* %4, %struct.state** %10, align 8
  %11 = load %struct.state*, %struct.state** %7, align 8
  %12 = load %struct.state*, %struct.state** %8, align 8
  %13 = icmp eq %struct.state* %11, %12
  br i1 %13, label %14, label %20

14:                                               ; preds = %5
  %15 = load %struct.nfa*, %struct.nfa** %6, align 8
  %16 = load i32, i32* @EMPTY, align 4
  %17 = load %struct.state*, %struct.state** %9, align 8
  %18 = load %struct.state*, %struct.state** %10, align 8
  %19 = call i32 @newarc(%struct.nfa* %15, i32 %16, i32 0, %struct.state* %17, %struct.state* %18)
  br label %33

20:                                               ; preds = %5
  %21 = load %struct.state*, %struct.state** %10, align 8
  %22 = load %struct.state*, %struct.state** %8, align 8
  %23 = getelementptr inbounds %struct.state, %struct.state* %22, i32 0, i32 0
  store %struct.state* %21, %struct.state** %23, align 8
  %24 = load %struct.nfa*, %struct.nfa** %6, align 8
  %25 = load %struct.state*, %struct.state** %7, align 8
  %26 = load %struct.state*, %struct.state** %9, align 8
  %27 = call i32 @duptraverse(%struct.nfa* %24, %struct.state* %25, %struct.state* %26)
  %28 = load %struct.state*, %struct.state** %8, align 8
  %29 = getelementptr inbounds %struct.state, %struct.state* %28, i32 0, i32 0
  store %struct.state* null, %struct.state** %29, align 8
  %30 = load %struct.nfa*, %struct.nfa** %6, align 8
  %31 = load %struct.state*, %struct.state** %7, align 8
  %32 = call i32 @cleartraverse(%struct.nfa* %30, %struct.state* %31)
  br label %33

33:                                               ; preds = %20, %14
  ret void
}

declare dso_local i32 @newarc(%struct.nfa*, i32, i32, %struct.state*, %struct.state*) #1

declare dso_local i32 @duptraverse(%struct.nfa*, %struct.state*, %struct.state*) #1

declare dso_local i32 @cleartraverse(%struct.nfa*, %struct.state*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
